# woosh

./: .gitattributes  .gitignore  .readthedocs.yml  README.md  bench.py  codecov.yml  lgtm.yml  pgo.py  profile.py  pyproject.toml  requirements.txt  setup.py
test/: CMakeLists.txt  bench.py  test.py  test_woosh.py  ucd.py
test/c/: .gitignore  build-cc.sh  build-gcc.sh  build-msvc.bat  capi_test_base.c  test.bat  test.sh  test_fifobuffer  test_fifobuffer.c  test_lifobuffer  test_module_get  test_module_get.c
test/c/api/: test_module_get.c
test/c/internal/: test_fifobuffer.c  test_lifobuffer.c
test/python/: data.py  generate-sample-tests.py  gensampletests.py  test_continueonerror.py  test_encoding.py  test_external.py  test_gc.py  test_general.py  test_indentation.py  test_name.py  test_number.py  test_operator.py  test_sample__pydecimal.py  test_sample_abc.py  test_sample_argparse.py  test_sample_ast.py  test_sample_bdb.py  test_sample_binhex.py  test_sample_chunk.py  test_sample_codeop.py  test_sample_configparser.py  test_sample_contextvars.py  test_sample_crypt.py  test_sample_dataclasses.py  test_sample_datetime.py  test_sample_doctest.py  test_sample_formatter.py  test_sample_ftplib.py  test_sample_getpass.py  test_sample_heapq.py  test_sample_inspect.py  test_sample_keyword.py  test_sample_mimetypes.py  test_sample_numbers.py  test_sample_opcode.py  test_sample_operator.py  test_sample_os.py  test_sample_pathlib.py  test_sample_pipes.py  test_sample_platform.py  (+21 more)
test/python/sample/: .gitattributes  generate.py  test__pydecimal.py  test_abc.py  test_ast.py  (+41 more)
(+155 files in other folders)
